appId: com.example.fibu
---
- tapOn:
    text: ".*Aufgaben.*"
- tapOn:
    text: ".*Einstellungen.*"
- tapOn:
    text: ".*Übersicht.*"
